fix: raise navbar z-index (#81)

--- a/src/templates/NavBar.module.css
+++ b/src/templates/NavBar.module.css
@@ -8,7 +8,7 @@ to fold the menu if it overflows. Let's go with a static value for now.
 .nav {
   position: sticky;
   inset-block-start: 0;
-  z-index: 1;
+  z-index: 1000001; /* Above jContent buttons */
   padding: 0.5rem;
   container-type: inline-size;
   color: var(--jahia-color);
